--- a/src/i18n/messages/ar.json
+++ b/src/i18n/messages/ar.json
@@ -59,6 +59,11 @@
     }
   },
   "home": {
+    "all_tools": "جميع الأدوات",
+    "search_placeholder": "البحث عن أداة...",
+    "all_categories": "الكل",
+    "showing_tools": "إجمالي {count} أداة",
+    "no_tools_found": "لم يتم العثور على أداة مطابقة",
     "tools_total": "إجمالي الأدوات",
     "tools_categories": "تصنيف الأدوات",
     "update_frequency": "معدل التحديث",
@@ -3201,6 +3206,66 @@
         "title": "مُترجم i18n JSON - توطين ملفات JSON باستخدام OpenRouter.",
         "description": "تسطيح مفاتيح JSON الخاصة باللغة، ثم إرسالها إلى خلفية ترجمة OpenRouter، وإعادة بناء الملف تلقائيًا.",
         "keywords": "مترجم i18n/json、 OpenRouter、 التوطين、 أداة ترجمة"
+      }
+    },
+    "text-counter": {
+      "name": "إحصائيات أحرف النص",
+      "description": "إحصاء عدد الأحرف والكلمات والأسطر وغيرها من المعلومات للنص",
+      "placeholder": "يرجى إدخال أو لصق النص المراد إحصاؤه...",
+      "input_title": "أدخل النص",
+      "input_desc": "أدخل محتوى النص المراد إحصاؤه",
+      "output_title": "نتائج الإحصائيات",
+      "output_desc": "إحصاء مؤشرات النص المختلفة في الوقت الفعلي",
+      "copy_stats": "نسخ نتائج الإحصائيات",
+      "stats": {
+        "characters": "إجمالي عدد الأحرف",
+        "characters_no_spaces": "عدد الأحرف (بدون مسافات)",
+        "words": "إجمالي عدد الكلمات",
+        "chinese_words": "عدد الأحرف الصينية",
+        "english_words": "عدد الكلمات الإنجليزية",
+        "numbers": "عدد الأرقام",
+        "sentences": "عدد الجمل",
+        "paragraphs": "عدد الفقرات",
+        "lines": "عدد الأسطر",
+        "bytes": "عدد البايتات (UTF-8)"
+      },
+      "introduction": "أداة إحصائيات أحرف النص هي أداة احترافية لتحليل النصوص، قادرة على إحصاء مؤشرات النص المختلفة في الوقت الفعلي، بما في ذلك إجمالي عدد الأحرف، وعدد الأحرف بدون مسافات، وعدد الأحرف الصينية، وعدد الكلمات الإنجليزية، وعدد الأرقام، وعدد الجمل، وعدد الفقرات، وعدد الأسطر، وعدد البايتات، وما إلى ذلك. تدعم الإحصائيات الدقيقة للنصوص المختلطة باللغتين الصينية والإنجليزية، وتستخدم على نطاق واسع في سيناريوهات مثل إحصاء عدد الكلمات في الكتابة، والتحقق من عدد الكلمات في الأوراق البحثية، وقيود محتوى وسائل التواصل الاجتماعي، وتحليل مقالات تحسين محركات البحث (SEO). تعمل الأداة محليًا بالكامل، مما يحمي خصوصية نص المستخدم وأمانه.",
+      "features": [
+        "📊 إحصائيات فورية، تعرض المؤشرات المختلفة فور الإدخال",
+        "🇨🇳 التعرف الدقيق على الأحرف الصينية والكلمات الإنجليزية",
+        "🔢 إحصاء ذكي للأرقام والجمل والفقرات",
+        "📝 يدعم إحصاء النصوص المختلطة باللغتين الصينية والإنجليزية",
+        "📋 نسخ جميع نتائج الإحصائيات بنقرة واحدة",
+        "🎯 حساب دقيق لعدد البايتات UTF-8",
+        "🔒 معالجة محلية، لحماية خصوصية النص",
+        "📱 تصميم متجاوب، يدعم الأجهزة المحمولة"
+      ],
+      "faq": [
+        {
+          "question": "ما الفرق بين عدد الأحرف وعدد الكلمات؟",
+          "answer": "عدد الأحرف يحصي جميع الأحرف في النص، بما في ذلك المسافات وعلامات الترقيم وما إلى ذلك. أما عدد الكلمات فيشير إلى وحدات الكلمات ذات المعنى: يتم حساب الصينية كحرف واحد، والإنجليزية ككلمة مفصولة بمسافات، وتعتبر الأرقام المتتالية رقمًا واحدًا. على سبيل المثال، عدد الأحرف في 'Hello 你好 123' هو 12، وعدد الكلمات هو 3 (كلمة إنجليزية واحدة + حرفان صينيان + رقم واحد)."
+        },
+        {
+          "question": "كيف يمكن إحصاء عدد الكلمات في ورقة بحثية أو مقال؟",
+          "answer": "الصق النص في مربع الإدخال، وستقوم الأداة تلقائيًا بإحصاء المؤشرات المختلفة. بالنسبة للأوراق البحثية الأكاديمية، عادة ما يتم التركيز على 'إجمالي عدد الكلمات' (الأحرف الصينية + الكلمات الإنجليزية) أو 'عدد الأحرف (بدون مسافات)'. قد تختلف معايير إحصاء الكلمات بين المجلات والجامعات المختلفة، لذا يوصى باختيار المؤشر المناسب وفقًا للمتطلبات المحددة."
+        },
+        {
+          "question": "كيف يتم حساب عدد الجمل؟",
+          "answer": "يتم حساب عدد الجمل باستخدام علامات الترقيم الصينية والإنجليزية مثل النقطة (. أو 。)، وعلامة الاستفهام (? أو ؟)، وعلامة التعجب (! أو ！). يتم حساب علامات الترقيم المتتالية مرة واحدة فقط، ولا يتم احتساب المحتوى الفارغ ضمن عدد الجمل."
+        },
+        {
+          "question": "ما فائدة عدد البايتات UTF-8؟",
+          "answer": "يعكس عدد البايتات UTF-8 الحجم الفعلي للنص عند تخزينه أو نقله. تشغل الأحرف الصينية عادة 3 بايتات في ترميز UTF-8، بينما تشغل الأحرف الإنجليزية بايت واحد. هذا مفيد جدًا في سيناريوهات مثل قيود طول حقول قاعدة البيانات، وقيود حجم طلبات API، وتقدير حجم الملفات."
+        },
+        {
+          "question": "ما هي اللغات التي تدعمها الأداة في الإحصائيات؟",
+          "answer": "تم تحسين الأداة بشكل أساسي للنصوص المختلطة باللغتين الصينية والإنجليزية، وهي قادرة على التمييز بدقة بين الأحرف الصينية والكلمات الإنجليزية. بالنسبة للغات الأخرى (مثل اليابانية والكورية وما إلى ذلك)، سيتم احتسابها حسب عدد الأحرف. تدعم إحصائيات الأرقام جميع الأرقام العربية."
+        }
+      ],
+      "meta": {
+        "title": "أداة إحصائيات أحرف النص - إحصاء الكلمات عبر الإنترنت",
+        "description": "أداة مجانية عبر الإنترنت لإحصاء أحرف النص، تقوم بإحصاء عدد الأحرف والكلمات والأسطر والفقرات في الوقت الفعلي، تدعم النصوص المختلطة باللغتين الصينية والإنجليزية، ومناسبة للكتابة وإنشاء المحتوى.",
+        "keywords": "إحصاء الأحرف، إحصاء الكلمات، إحصاء النص"
       }
     }
   },
