--- a/src/i18n/messages/hi.json
+++ b/src/i18n/messages/hi.json
@@ -59,6 +59,11 @@
     }
   },
   "home": {
+    "all_tools": "सभी उपकरण",
+    "search_placeholder": "उपकरण खोजें...",
+    "all_categories": "सभी",
+    "showing_tools": "कुल {count} उपकरण",
+    "no_tools_found": "कोई मेल खाने वाला उपकरण नहीं मिला",
     "tools_total": "कुल उपकरण",
     "tools_categories": "उपकरण श्रेणियां",
     "update_frequency": "अपडेट आवृत्ति",
@@ -3203,6 +3208,66 @@
         "title": "i18n JSON अनुवादक - OpenRouter के साथ JSON फ़ाइलों को स्थानीयकृत करें",
         "description": "लोकेल JSON कुंजियों को सपाट करें, उन्हें अपने OpenRouter अनुवाद बैकएंड को भेजें, और फ़ाइल को स्वचालित रूप से पुनर्निर्माण करें।",
         "keywords": "i18n,json अनुवादक,openrouter,स्थानीयकरण,अनुवाद उपकरण"
+      }
+    },
+    "text-counter": {
+      "name": "पाठ वर्ण सांख्यिकी",
+      "description": "पाठ के वर्णों की संख्या, शब्दों की संख्या, पंक्तियों की संख्या आदि की जानकारी गिनें",
+      "placeholder": "कृपया गणना करने के लिए पाठ दर्ज करें या चिपकाएँ...",
+      "input_title": "पाठ दर्ज करें",
+      "input_desc": "गणना करने के लिए पाठ सामग्री दर्ज करें",
+      "output_title": "सांख्यिकी परिणाम",
+      "output_desc": "पाठ के विभिन्न मापदंडों की वास्तविक समय में गणना करें",
+      "copy_stats": "सांख्यिकी परिणाम कॉपी करें",
+      "stats": {
+        "characters": "कुल वर्ण संख्या",
+        "characters_no_spaces": "वर्ण संख्या (स्थानों के बिना)",
+        "words": "कुल शब्द संख्या",
+        "chinese_words": "चीनी शब्दों की संख्या",
+        "english_words": "अंग्रेजी शब्दों की संख्या",
+        "numbers": "अंकों की संख्या",
+        "sentences": "वाक्यों की संख्या",
+        "paragraphs": "अनुच्छेदों की संख्या",
+        "lines": "पंक्तियों की संख्या",
+        "bytes": "बाइट्स की संख्या (UTF-8)"
+      },
+      "introduction": "पाठ वर्ण सांख्यिकी उपकरण एक पेशेवर पाठ विश्लेषण उपकरण है, जो पाठ के विभिन्न मापदंडों की वास्तविक समय में गणना कर सकता है, जिसमें कुल वर्ण संख्या, स्थानों के बिना वर्ण संख्या, चीनी शब्दों की संख्या, अंग्रेजी शब्दों की संख्या, अंकों की संख्या, वाक्यों की संख्या, अनुच्छेदों की संख्या, पंक्तियों की संख्या और बाइट्स की संख्या आदि शामिल हैं। यह चीनी और अंग्रेजी मिश्रित पाठ की सटीक गणना का समर्थन करता है, और लेखन शब्द गणना, निबंध शब्द जांच, सोशल मीडिया सामग्री सीमा, एसईओ लेख विश्लेषण जैसे परिदृश्यों में व्यापक रूप से उपयोग किया जाता है। यह उपकरण पूरी तरह से स्थानीय रूप से चलता है, उपयोगकर्ता के पाठ की गोपनीयता और सुरक्षा की रक्षा करता है।",
+      "features": [
+        "📊 वास्तविक समय में गणना, इनपुट करते ही विभिन्न मापदंड तुरंत प्रदर्शित होते हैं",
+        "🇨🇳 चीनी वर्णों और अंग्रेजी शब्दों की सटीक पहचान",
+        "🔢 अंकों, वाक्यों और अनुच्छेदों की स्मार्ट गणना",
+        "📝 चीनी और अंग्रेजी मिश्रित पाठ गणना का समर्थन करता है",
+        "📋 सभी सांख्यिकी परिणामों को एक क्लिक में कॉपी करें",
+        "🎯 UTF-8 बाइट्स की संख्या की सटीक गणना",
+        "🔒 स्थानीय प्रसंस्करण, पाठ की गोपनीयता की रक्षा करता है",
+        "📱 प्रतिक्रियाशील डिज़ाइन, मोबाइल उपकरणों का समर्थन करता है"
+      ],
+      "faq": [
+        {
+          "question": "वर्ण संख्या और शब्द संख्या में क्या अंतर है?",
+          "answer": "वर्ण संख्या पाठ में सभी वर्णों की गणना करती है, जिसमें स्थान, विराम चिह्न आदि शामिल हैं। जबकि शब्द संख्या का अर्थ सार्थक शब्द इकाई है: चीनी को एकल वर्णों के रूप में गिना जाता है, अंग्रेजी को स्थानों से अलग किए गए शब्दों के रूप में गिना जाता है, और लगातार अंकों को एक अंक के रूप में गिना जाता है। उदाहरण के लिए, 'Hello 你好 123' में वर्ण संख्या 12 है, और शब्द संख्या 3 है (1 अंग्रेजी शब्द + 2 चीनी वर्ण + 1 अंक)।"
+        },
+        {
+          "question": "निबंध या लेख के शब्दों की संख्या की गणना कैसे करें?",
+          "answer": "पाठ को इनपुट बॉक्स में चिपकाएँ, और उपकरण स्वचालित रूप से विभिन्न मापदंडों की गणना करेगा। अकादमिक निबंधों के लिए, आमतौर पर 'कुल शब्द संख्या' (चीनी वर्ण + अंग्रेजी शब्द) या 'वर्ण संख्या (स्थानों के बिना)' पर ध्यान केंद्रित किया जाता है। विभिन्न पत्रिकाओं और स्कूलों के लिए शब्द गणना मानक भिन्न हो सकते हैं, इसलिए विशिष्ट आवश्यकताओं के अनुसार उपयुक्त मापदंड का चयन करने की सलाह दी जाती है।"
+        },
+        {
+          "question": "वाक्यों की संख्या की गणना कैसे की जाती है?",
+          "answer": "वाक्यों की संख्या की गणना चीनी और अंग्रेजी के पूर्ण विराम (. या ।), प्रश्न चिह्न (? या ?), विस्मयादिबोधक चिह्न (! या !) को विभाजक के रूप में करके की जाती है। लगातार विराम चिह्नों को केवल एक बार गिना जाता है, और खाली सामग्री को वाक्यों की संख्या में नहीं गिना जाता है।"
+        },
+        {
+          "question": "UTF-8 बाइट्स की संख्या का क्या उपयोग है?",
+          "answer": "UTF-8 बाइट्स की संख्या पाठ के भंडारण या संचरण के दौरान वास्तविक आकार को दर्शाती है। UTF-8 एन्कोडिंग में चीनी वर्ण आमतौर पर 3 बाइट्स लेते हैं, जबकि अंग्रेजी वर्ण 1 बाइट लेते हैं। यह डेटाबेस फ़ील्ड लंबाई प्रतिबंध, एपीआई अनुरोध आकार प्रतिबंध, फ़ाइल आकार अनुमान आदि जैसे परिदृश्यों के लिए बहुत उपयोगी है।"
+        },
+        {
+          "question": "उपकरण किन भाषाओं की गणना का समर्थन करता है?",
+          "answer": "यह उपकरण मुख्य रूप से चीनी और अंग्रेजी मिश्रित पाठ के लिए अनुकूलित है, और चीनी वर्णों और अंग्रेजी शब्दों के बीच सटीक रूप से अंतर कर सकता है। अन्य भाषाओं (जैसे जापानी, कोरियाई आदि) के लिए, यह वर्ण संख्या के अनुसार गणना करेगा। अंक गणना सभी अरबी अंकों का समर्थन करती है।"
+        }
+      ],
+      "meta": {
+        "title": "पाठ वर्ण सांख्यिकी उपकरण - ऑनलाइन शब्द गणना",
+        "description": "निःशुल्क ऑनलाइन पाठ वर्ण सांख्यिकी उपकरण, वास्तविक समय में वर्ण संख्या, शब्द संख्या, पंक्तियों की संख्या, अनुच्छेदों की संख्या की गणना करता है, चीनी और अंग्रेजी मिश्रित पाठ का समर्थन करता है, लेखन और सामग्री निर्माण के लिए उपयुक्त है।",
+        "keywords": "वर्ण गणना, शब्द गणना, पाठ गणना"
       }
     }
   },
