--- a/src/i18n/messages/ja.json
+++ b/src/i18n/messages/ja.json
@@ -59,6 +59,11 @@
     }
   },
   "home": {
+    "all_tools": "全てのツール",
+    "search_placeholder": "ツールを検索...",
+    "all_categories": "全て",
+    "showing_tools": "合計 {count} 個のツール",
+    "no_tools_found": "一致するツールは見つかりませんでした",
     "tools_total": "ツール総数",
     "tools_categories": "ツール分類",
     "update_frequency": "更新頻度",
@@ -3201,6 +3206,66 @@
         "title": "i18n JSON 翻訳ツール - OpenRouter を使用して JSON ファイルをローカライズ",
         "description": "言語 JSON キーをフラット化し、それらを OpenRouter 翻訳バックエンドへ送信して、ファイルを自動的に再構築します。",
         "keywords": "i18n,json 翻訳ツール, OpenRouter, ローカライズ, 翻訳ツール"
+      }
+    },
+    "text-counter": {
+      "name": "テキスト文字数統計",
+      "description": "テキストの文字数、単語数、行数などの情報を統計します",
+      "placeholder": "統計したいテキストを入力または貼り付けてください...",
+      "input_title": "テキスト入力",
+      "input_desc": "統計したいテキスト内容を入力",
+      "output_title": "統計結果",
+      "output_desc": "テキストの各種指標をリアルタイムで統計",
+      "copy_stats": "統計結果をコピー",
+      "stats": {
+        "characters": "総文字数",
+        "characters_no_spaces": "文字数（スペースなし）",
+        "words": "総単語数",
+        "chinese_words": "中国語文字数",
+        "english_words": "英単語数",
+        "numbers": "数字の数",
+        "sentences": "文数",
+        "paragraphs": "段落数",
+        "lines": "行数",
+        "bytes": "バイト数（UTF-8）"
+      },
+      "introduction": "テキスト文字数統計ツールは、総文字数、スペースなし文字数、中国語文字数、英単語数、数字の数、文数、段落数、行数、バイト数など、テキストの様々な指標をリアルタイムで統計できるプロフェッショナルなテキスト分析ツールです。中国語と英語が混在するテキストの正確な統計をサポートし、執筆時の文字数カウント、論文の文字数チェック、ソーシャルメディアのコンテンツ制限、SEO記事分析などのシナリオで広く利用されています。このツールは完全にローカルで動作し、ユーザーのテキストプライバシーを保護します。",
+      "features": [
+        "📊 リアルタイム統計、入力するとすぐに各種指標を表示",
+        "🇨🇳 中国語文字と英単語を正確に識別",
+        "🔢 数字、文、段落をスマートに統計",
+        "📝 中国語と英語が混在するテキストの統計をサポート",
+        "📋 ワンクリックで全ての統計結果をコピー",
+        "🎯 UTF-8バイト数を正確に計算",
+        "🔒 ローカル処理でテキストプライバシーを保護",
+        "📱 レスポンシブデザイン、モバイル対応"
+      ],
+      "faq": [
+        {
+          "question": "文字数と単語数の違いは何ですか？",
+          "answer": "文字数とは、スペースや句読点を含むテキスト内の全ての文字を数えたものです。一方、単語数とは、意味のある単語単位を指します。中国語は1文字を1単語として数え、英語はスペースで区切られた単語を数え、連続する数字は1つの数字として数えます。例えば、「Hello 你好 123」の文字数は12ですが、単語数は3（英単語1つ＋中国語2文字＋数字1つ）です。"
+        },
+        {
+          "question": "論文や記事の文字数を統計するにはどうすればよいですか？",
+          "answer": "テキストを入力ボックスに貼り付けると、ツールが自動的に各種指標を統計します。学術論文の場合、通常は「総単語数」（中国語文字数＋英単語数）または「文字数（スペースなし）」が注目されます。ジャーナルや学校によって文字数統計の基準が異なる場合があるため、具体的な要件に基づいて適切な指標を選択することをお勧めします。"
+        },
+        {
+          "question": "文数はどのように計算されますか？",
+          "answer": "文数は、中国語と英語の句点（.または。）、疑問符（?または？）、感嘆符（!または！）を区切り文字として計算されます。連続する句読点は1回のみカウントされ、空白内容は文数には含まれません。"
+        },
+        {
+          "question": "UTF-8バイト数にはどのような用途がありますか？",
+          "answer": "UTF-8バイト数は、テキストが保存または転送される際の実際のサイズを示します。中国語文字はUTF-8エンコーディングで通常3バイトを占め、英字は1バイトを占めます。これは、データベースのフィールド長制限、APIリクエストサイズ制限、ファイルサイズの推定などのシナリオで非常に役立ちます。"
+        },
+        {
+          "question": "このツールはどの言語の統計をサポートしていますか？",
+          "answer": "このツールは主に中国語と英語が混在するテキスト向けに最適化されており、中国語文字と英単語を正確に区別できます。その他の言語（日本語、韓国語など）については、文字数で統計されます。数字の統計は全てのアラビア数字をサポートしています。"
+        }
+      ],
+      "meta": {
+        "title": "テキスト文字数統計ツール - オンライン文字数カウント",
+        "description": "無料のオンラインテキスト文字数統計ツール。文字数、単語数、行数、段落数をリアルタイムで統計し、中国語と英語が混在するテキストをサポート。執筆やコンテンツ作成に適しています。",
+        "keywords": "文字数統計, 単語数統計, テキスト統計"
       }
     }
   },
