--- a/src/i18n/messages/ko.json
+++ b/src/i18n/messages/ko.json
@@ -59,6 +59,11 @@
     }
   },
   "home": {
+    "all_tools": "모든 도구",
+    "search_placeholder": "도구 검색...",
+    "all_categories": "전체",
+    "showing_tools": "총 {count}개 도구",
+    "no_tools_found": "일치하는 도구를 찾을 수 없습니다",
     "tools_total": "도구 총수",
     "tools_categories": "도구 분류",
     "update_frequency": "업데이트 빈도",
@@ -3201,6 +3206,66 @@
         "title": "i18n JSON 번역기 - OpenRouter를 사용한 로컬라이즈 JSON 파일",
         "description": "언어 JSON 키를 평면화하여 OpenRouter 번역 백엔드로 전송하고 파일을 자동으로 재구성합니다.",
         "keywords": "i18n.json 번역기, OpenRouter, 로컬라이제이션, 번역 도구"
+      }
+    },
+    "text-counter": {
+      "name": "텍스트 문자 통계",
+      "description": "텍스트의 문자 수, 단어 수, 줄 수 등의 정보 통계",
+      "placeholder": "통계할 텍스트를 입력하거나 붙여넣으세요...",
+      "input_title": "텍스트 입력",
+      "input_desc": "통계할 텍스트 내용을 입력하세요",
+      "output_title": "통계 결과",
+      "output_desc": "텍스트의 각 지표를 실시간으로 통계",
+      "copy_stats": "통계 결과 복사",
+      "stats": {
+        "characters": "총 문자 수",
+        "characters_no_spaces": "문자 수 (공백 제외)",
+        "words": "총 단어 수",
+        "chinese_words": "중국어 단어 수",
+        "english_words": "영어 단어 수",
+        "numbers": "숫자 개수",
+        "sentences": "문장 수",
+        "paragraphs": "단락 수",
+        "lines": "줄 수",
+        "bytes": "바이트 수 (UTF-8)"
+      },
+      "introduction": "텍스트 문자 통계 도구는 총 문자 수, 공백 제외 문자 수, 중국어 단어 수, 영어 단어 수, 숫자 개수, 문장 수, 단락 수, 줄 수, 바이트 수 등 텍스트의 다양한 지표를 실시간으로 통계할 수 있는 전문 텍스트 분석 도구입니다. 중국어와 영어 혼합 텍스트의 정확한 통계를 지원하며, 글쓰기 단어 수 통계, 논문 단어 수 확인, 소셜 미디어 콘텐츠 제한, SEO 기사 분석 등 다양한 시나리오에 널리 사용됩니다. 이 도구는 사용자 텍스트의 개인 정보 보호를 위해 완전히 로컬에서 실행됩니다.",
+      "features": [
+        "📊 실시간 통계, 입력 즉시 각 지표 표시",
+        "🇨🇳 중국어 문자와 영어 단어 정확히 인식",
+        "🔢 숫자, 문장, 단락 스마트 통계",
+        "📝 중국어 및 영어 혼합 텍스트 통계 지원",
+        "📋 모든 통계 결과 원클릭 복사",
+        "🎯 UTF-8 바이트 수 정확한 계산",
+        "🔒 로컬 처리, 텍스트 개인 정보 보호",
+        "📱 반응형 디자인, 모바일 지원"
+      ],
+      "faq": [
+        {
+          "question": "문자 수와 단어 수의 차이점은 무엇인가요?",
+          "answer": "문자 수는 공백, 구두점 등을 포함하여 텍스트의 모든 문자를 통계합니다. 반면 단어 수는 의미 있는 단어 단위를 의미합니다. 중국어는 개별 글자로 계산하고, 영어는 공백으로 구분된 단어로 계산하며, 연속된 숫자는 하나의 숫자로 간주합니다. 예를 들어 'Hello 你好 123'의 문자 수는 12이고, 단어 수는 3(영어 단어 1개 + 중국어 글자 2개 + 숫자 1개)입니다."
+        },
+        {
+          "question": "논문 또는 기사의 단어 수를 어떻게 통계하나요?",
+          "answer": "텍스트를 입력 상자에 붙여넣으면 도구가 자동으로 각 지표를 통계합니다. 학술 논문의 경우 일반적으로 '총 단어 수'(중국어 글자 + 영어 단어) 또는 '문자 수(공백 제외)'에 중점을 둡니다. 저널 및 학교마다 단어 수 통계 기준이 다를 수 있으므로 특정 요구 사항에 따라 적절한 지표를 선택하는 것이 좋습니다."
+        },
+        {
+          "question": "문장 수는 어떻게 계산되나요?",
+          "answer": "문장 수는 중국어 및 영어의 마침표(. 또는 。), 물음표(? 또는 ？), 느낌표(! 또는 !)를 구분 기호로 사용하여 계산됩니다. 연속된 구두점은 한 번만 계산되며, 공백 내용은 문장 수에 포함되지 않습니다."
+        },
+        {
+          "question": "UTF-8 바이트 수는 어디에 사용되나요?",
+          "answer": "UTF-8 바이트 수는 텍스트가 저장되거나 전송될 때의 실제 크기를 나타냅니다. 중국어 문자는 UTF-8 인코딩에서 일반적으로 3바이트를 차지하고, 영어 문자는 1바이트를 차지합니다. 이는 데이터베이스 필드 길이 제한, API 요청 크기 제한, 파일 크기 추정 등 다양한 시나리오에서 매우 유용합니다."
+        },
+        {
+          "question": "이 도구는 어떤 언어의 통계를 지원하나요?",
+          "answer": "이 도구는 주로 중국어 및 영어 혼합 텍스트에 최적화되어 있으며, 중국어 문자와 영어 단어를 정확하게 구분할 수 있습니다. 다른 언어(예: 일본어, 한국어 등)의 경우 문자 수로 통계됩니다. 숫자 통계는 모든 아라비아 숫자를 지원합니다."
+        }
+      ],
+      "meta": {
+        "title": "텍스트 문자 통계 도구 - 온라인 단어 수 통계",
+        "description": "무료 온라인 텍스트 문자 통계 도구, 문자 수, 단어 수, 줄 수, 단락 수를 실시간으로 통계하며, 중국어 및 영어 혼합 텍스트를 지원하여 글쓰기 및 콘텐츠 제작에 적합합니다.",
+        "keywords": "문자 통계, 단어 수 통계, 텍스트 통계"
       }
     }
   },
