--- a/src/i18n/messages/ru.json
+++ b/src/i18n/messages/ru.json
@@ -59,6 +59,11 @@
     }
   },
   "home": {
+    "all_tools": "Все инструменты",
+    "search_placeholder": "Поиск инструментов...",
+    "all_categories": "Все",
+    "showing_tools": "Всего {count} инструментов",
+    "no_tools_found": "Соответствующие инструменты не найдены",
     "tools_total": "Всего инструментов",
     "tools_categories": "Категории инструментов",
     "update_frequency": "Частота обновлений",
@@ -3201,6 +3206,66 @@
         "title": "i18n JSON переводчик, OpenRouter, локализация, инструменты перевода",
         "description": "Упрощение ключей языков в JSON, отправка их на ваш бэкенд перевода OpenRouter и автоматическое восстановление файла.",
         "keywords": "i18n.json переводчик, OpenRouter, локализация, инструменты перевода"
+      }
+    },
+    "text-counter": {
+      "name": "Статистика символов текста",
+      "description": "Подсчет символов, слов, строк и другой информации в тексте",
+      "placeholder": "Пожалуйста, введите или вставьте текст для анализа...",
+      "input_title": "Введите текст",
+      "input_desc": "Введите содержимое текста для анализа",
+      "output_title": "Результаты статистики",
+      "output_desc": "Статистика различных показателей текста в реальном времени",
+      "copy_stats": "Скопировать результаты статистики",
+      "stats": {
+        "characters": "Общее количество символов",
+        "characters_no_spaces": "Количество символов (без пробелов)",
+        "words": "Общее количество слов",
+        "chinese_words": "Количество китайских иероглифов",
+        "english_words": "Количество английских слов",
+        "numbers": "Количество цифр",
+        "sentences": "Количество предложений",
+        "paragraphs": "Количество абзацев",
+        "lines": "Количество строк",
+        "bytes": "Количество байтов (UTF-8)"
+      },
+      "introduction": "Инструмент для статистики символов текста — это профессиональный инструмент для анализа текста, который позволяет в реальном времени подсчитывать различные показатели текста, включая общее количество символов, количество символов без пробелов, количество китайских иероглифов, количество английских слов, количество цифр, количество предложений, количество абзацев, количество строк и количество байтов. Он поддерживает точную статистику для смешанных китайско-английских текстов и широко используется для подсчета слов при написании, проверки количества слов в диссертациях, ограничениях на контент в социальных сетях, анализе SEO-статей и других сценариях. Инструмент полностью работает локально, обеспечивая конфиденциальность пользовательского текста.",
+      "features": [
+        "📊 Статистика в реальном времени, показатели отображаются мгновенно при вводе",
+        "🇨🇳 Точное распознавание китайских иероглифов и английских слов",
+        "🔢 Интеллектуальный подсчет цифр, предложений и абзацев",
+        "📝 Поддержка статистики для смешанных китайско-английских текстов",
+        "📋 Копирование всех результатов статистики одним нажатием",
+        "🎯 Точный расчет количества байтов UTF-8",
+        "🔒 Локальная обработка, защита конфиденциальности текста",
+        "📱 Адаптивный дизайн, поддержка мобильных устройств"
+      ],
+      "faq": [
+        {
+          "question": "В чем разница между количеством символов и количеством слов?",
+          "answer": "Количество символов подсчитывает все символы в тексте, включая пробелы, знаки препинания и т. д. Количество слов относится к значимым словесным единицам: китайские слова считаются по отдельным иероглифам, английские слова — по словам, разделенным пробелами, а последовательность цифр считается одной цифрой. Например, в 'Hello 你好 123' количество символов — 12, а количество слов — 3 (1 английское слово + 2 китайских иероглифа + 1 цифра)."
+        },
+        {
+          "question": "Как подсчитать количество слов в диссертации или статье?",
+          "answer": "Вставьте текст в поле ввода, и инструмент автоматически подсчитает все показатели. Для академических работ обычно обращают внимание на 'Общее количество слов' (китайские иероглифы + английские слова) или 'Количество символов (без пробелов)'. Стандарты подсчета слов могут отличаться в разных журналах и учебных заведениях, поэтому рекомендуется выбирать подходящий показатель в соответствии с конкретными требованиями."
+        },
+        {
+          "question": "Как рассчитывается количество предложений?",
+          "answer": "Количество предложений рассчитывается с использованием точек (. или 。), вопросительных знаков (? или ？) и восклицательных знаков (! или！) в качестве разделителей для китайского и английского языков. Последовательные знаки препинания считаются только один раз, а пустое содержимое не учитывается при подсчете предложений."
+        },
+        {
+          "question": "Для чего нужно количество байтов UTF-8?",
+          "answer": "Количество байтов UTF-8 отражает фактический размер текста при хранении или передаче. Китайские символы в кодировке UTF-8 обычно занимают 3 байта, а английские символы — 1 байт. Это очень полезно для таких сценариев, как ограничения длины полей базы данных, ограничения размера запросов API, оценка размера файлов и т. д."
+        },
+        {
+          "question": "Какие языки поддерживает инструмент для статистики?",
+          "answer": "Инструмент в основном оптимизирован для смешанных китайско-английских текстов и способен точно различать китайские иероглифы и английские слова. Для других языков (таких как японский, корейский и т. д.) подсчет будет производиться по количеству символов. Подсчет цифр поддерживает все арабские цифры."
+        }
+      ],
+      "meta": {
+        "title": "Инструмент для статистики символов текста - Онлайн-подсчет слов",
+        "description": "Бесплатный онлайн-инструмент для статистики символов текста, подсчитывающий в реальном времени количество символов, слов, строк, абзацев, поддерживающий смешанные китайско-английские тексты, подходящий для написания и создания контента.",
+        "keywords": "Статистика символов, Статистика слов, Статистика текста"
       }
     }
   },
